# pgAgent

./: README.md  RESUME_BULLETS.md
backend/: .env.example  pyproject.toml
backend/pgagent/: __init__.py  agent.py  config.py  detector.py  evaluator.py  exceptions.py  executor.py  main.py  models.py  observer.py  prompts.py  reasoner.py  rules.py  sidecar.py  suggestion_queue.py  validator.py
backend/pgagent/api/: app.py  routes_actions.py  routes_config.py  routes_health.py  routes_queries.py  routes_suggestions.py  websocket.py
backend/pgagent/tools/: bloat_tools.py  connection_tools.py  index_tools.py  maintenance_tools.py  query_tools.py  registry.py
demo/: docker-compose.yml  init.sql  postgresql.conf  seed.sql  workload_simulator.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  websocket.ts
frontend/src/components/: ActionRow.tsx  HealthGauge.tsx  LockChainView.tsx  MetricChart.tsx  QueryTable.tsx  SuggestionCard.tsx  TableHealthCard.tsx
frontend/src/hooks/: useActions.ts  useHealth.ts  useSuggestions.ts  useWebSocket.ts
frontend/src/pages/: History.tsx  (+4 more)
tests/: conftest.py
tests/test_integration/: conftest.py  test_idle_transaction_detection.py  test_lock_contention_detection.py  test_no_false_positives.py  test_rollback.py  test_seq_scan_detection.py  test_suggestion_lifecycle.py  test_unused_index_detection.py  test_vacuum_detection.py
tests/test_unit/: test_evaluator_logic.py  test_models.py  test_rule_engine.py  test_suggestion_queue.py  test_validator.py
