[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgagent"
version = "0.1.0"
description = "PostgreSQL monitoring and optimization agent"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "groq>=0.4",
    "apscheduler>=3.10,<4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]

[project.scripts]
pgagent = "pgagent.main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["../tests"]
asyncio_mode = "auto"
